# bazel-registry

./: .gitignore  BUILD.bazel  MODULE.bazel  ROADMAP.md  bazel_registry.json
.github/workflows/: nightly-audit.yml  nightly-integration.yml
modules/rules_bibtex/: metadata.json
modules/rules_bun/: metadata.json
modules/rules_cloudformation/: metadata.json
modules/rules_cloudformation/0.1.0/: MODULE.bazel  source.json
modules/rules_docker_compose/: metadata.json
modules/rules_docker_compose/0.1.0/: MODULE.bazel  source.json
modules/rules_docker_compose/0.2.3/: source.json
modules/rules_github/: metadata.json
modules/rules_gitlab/: metadata.json
modules/rules_jena/: metadata.json
modules/rules_jsonschema/: metadata.json
modules/rules_jsonschema/0.1.0/: MODULE.bazel  source.json
modules/rules_lean/: metadata.json
modules/rules_lean/0.1.0/: source.json
modules/rules_lean/0.2.0/: source.json
modules/rules_lean/0.2.1/: source.json
modules/rules_lean/0.2.2/: source.json
modules/rules_lora/: metadata.json
modules/rules_mdbook/: metadata.json
modules/rules_mdbook/0.1.0/: source.json
modules/rules_mdbook/0.2.0/: source.json
modules/rules_nextjs/: metadata.json
modules/rules_openapi/: metadata.json
modules/rules_postgres/: metadata.json
modules/rules_puml/: metadata.json
modules/rules_rdf/: metadata.json
modules/rules_runpod/: metadata.json
modules/rules_ssh_tui/: metadata.json
modules/rules_tectonic/: metadata.json
modules/rules_uv/: metadata.json
tools/add_module/: add_module.py
tools/rels/: BUILD.bazel  Cargo.toml  README.md
tools/rels/src/: bump.rs  main.rs  release.rs
(+6 files in other folders)
